--- a/src/app/client/profiles/shared/sidebar/sidebar.component.html
+++ b/src/app/client/profiles/shared/sidebar/sidebar.component.html
@@ -8,14 +8,14 @@
                             <div class="user_avatar"><img src="assets/admin/img/Avarta-min.jpg"></div>
                             <div class="user_meta">
                                 <div class="inner">
-                                    <div class="user_name">Thanh Binh</div>
-                                    <div class="user_verify" style="color: #555; font-size: 0.9rem;">0973800896</div>
+                                    <div class="user_name">{{customerModel?.name}}</div>
+                                    <div class="user_verify" style="color: #555; font-size: 0.9rem;">{{customerModel?.phone}}</div>
                                 </div>
                             </div>
                         </a>
                         <ul>
-                            <li><span>Mã thành viên:</span> <span style="font-weight: 700;"> 2</span></li>
-                            <li><span>Số dư:</span> <span style="font-weight: 700;"> 998000 đ</span></li>
+                            <li><span>Mã thành viên:</span> <span style="font-weight: 700;"> {{customerModel?.customerId}}</span></li>
+                            <li><span>Số dư:</span> <span style="font-weight: 700;"> {{customerModel?.accountBalance}} đ</span></li>
                         </ul>
                         <a class="btn btn-warning btn-sm mr-1" routerLink="paypal-handle">Nạp tiền</a>
                         <a class="btn btn-danger btn-sm" routerLink="create-article">Đăng tin</a>
