--- a/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
+++ b/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
@@ -159,7 +159,7 @@
     <div class="card mb-3">
         <div class="card-body">
             <div>Số dư tài khoản</div>
-            <h3 class="heading" style="margin-top: 0; margin-bottom: 0; color: #28a745;"><strong>0đ</strong></h3>
+            <h3 class="heading" style="margin-top: 0; margin-bottom: 0; color: #28a745;"><strong>{{customerModel?.accountBalance}}đ</strong></h3>
         </div>
     </div>
     <a class="btn btn-secondary btn-block" href="https://phongtro123.com/quan-ly/lich-su-nap-tien.html">Lịch sử nạp tiền <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
