--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -67,7 +67,7 @@
                                     <td>
                                         <div class="post_thumb">
                                             <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
-                                                <img src="https://www.careergro.com/images/usa-img.jpg"></a>
+                                                <img src="{{new.image}}"></a>
                                         </div>
                                     </td>
                                     <td>
