--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -116,8 +116,7 @@
 
                             <div class="form-group">
                                 <label> Ảnh </label>
-                                <!-- <input type="file" class="form-control form-control-user"id="image" placeholder=""> -->
-                                <upload-file #uploadfile (urlFile)="linkUrl($event)" [folderName]="ImgName" class="form-control form-control-user"></upload-file>
+                                <input type="file" class="form-control form-control-user" id="image" placeholder="">
                             </div>
 
                             <div class="form-group row">
