--- a/src/app/admin/staff-manager/view-staff/view-staff.component.html
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.html
@@ -64,7 +64,7 @@
                                     <td *ngIf="staff.deleted == true" [ngStyle]="{'color':'red'}">Đang khóa</td>
                                     <td *ngIf="staff.deleted == false" [ngStyle]="{'color':'green'}">Hoạt động</td>
                                     <td>
-                                        <img src="{{staff.image}}" 
+                                        <img src="https://{{staff.image}}" 
                                             style="width: 80px; height: 100px; padding-top: 10px;" />
                                     </td>
 
