handle success upload file staff, newparper

--- a/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
+++ b/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
@@ -6,7 +6,7 @@
                 <div class="side-bar">
                     <div class="user-info">
                       <!-- ẢNH người dùng -->
-                        <img id="anh" class="img-profile img-circle img-responsive " src="https://media.travelmag.vn/files/thuannguyen/2020/04/25/cach-chup-anh-dep-tai-da-lat-1-2306.jpeg" alt="">
+                        <img id="anh" class="img-profile img-circle img-responsive " src="{{customer?.image}}" alt="">
                         <ul class="meta list list-unstyled">
                             <!-- TÊN người dùng -->
                             <li class="name">{{customer?.name}}
