--- a/src/app/admin/newspaper-manager/detail-newspaper/detail-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/detail-newspaper/detail-newspaper.component.html
@@ -6,7 +6,7 @@
                 <div class="side-bar">
                     <div class="user-info">
                       <!-- ẢNH -->
-                        <img class="img-profile img-circle img-responsive center-block" src="https://foodi.com.vn/wp-content/uploads/2019/12/website-cho-thue-phong-tro-1.png" alt="">
+                        <img class="img-profile img-circle img-responsive center-block" src="{{news?.image}}" alt="">
                     </div>
                 </div>
                 <div class="content-panel">
