--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -13,72 +13,33 @@
                             <div class="form-group">
                                 <label> Họ và tên </label>
                                 <input type="text" [formControlName]="'name'" class="form-control form-control-user" id="name" placeholder="" required>
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 1">
-                                        Họ tên không được bỏ trống
-                                    </span>
-                                    <span *ngIf="messNumber == 2">
-                                        Hãy nhập không dưới 6 ký tự
-                                    </span>
-                                </div>
                             </div>
+
                             <div class="form-group">
                                 <label> Email </label>
                                 <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email" placeholder="">
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 3">
-                                        Email không được bỏ trống
-                                    </span>
-                                    <span *ngIf="messNumber == 4">
-                                        Hãy nhập email hợp lệ
-                                    </span>
-                                </div>
                             </div>
+
                             <div class="form-group">
                                 <label> Số điện thoại </label>
                                 <input type="text" [formControlName]="'phone'" class="form-control form-control-user" id="cardId" placeholder="">
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 5">
-                                        Phone không được bỏ trống
-                                    </span>
-                                    <span *ngIf="messNumber == 6">
-                                        Hãy nhập không dưới 9 ký tự
-                                    </span>
-                                </div>
                             </div>
+
                             <div class="form-group">
                                 <label> Số chứng minh nhân dân - thẻ căn cước </label>
                                 <input type="text" [formControlName]="'cardId'" class="form-control form-control-user" id="phone" placeholder="">
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 7">
-                                        CardId không được bỏ trống
-                                    </span>
-                                    <span *ngIf="messNumber == 8">
-                                        Hãy nhập không dưới 9 ký tự
-                                    </span>
-                                </div>
                             </div>
+
                             <div class="form-group">
                                 <label> Địa chỉ </label>
                                 <input type="text" [formControlName]="'address'" class="form-control form-control-user" id="address" placeholder="">
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 9">
-                                        Địa chỉ không được bỏ trống
-                                    </span>
-                                    <span *ngIf="messNumber == 10">
-                                        Hãy nhập không dưới 6 ký tự
-                                    </span>
-                                </div>
                             </div>
+
                             <div class="form-group">
                                 <label> Ngày sinh </label>
                                 <input type="date" [formControlName]="'birthday'" class="form-control form-control-user" id="birthday" placeholder="">
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 11">
-                                        Ngày sinh không được bỏ trống
-                                    </span>
-                                </div>
                             </div>
+                            
                             <div class="form-group row">
                                 <div class="radio-label">
                                     Giới tính:
@@ -89,11 +50,6 @@
 
                                     <input id="radio-2" type="radio" name="gender" [value]="false" [formControlName]="'gender'">
                                     <label for="radio-2" class="radio-label">Nữ</label>
-                                    <div class="valid-false">
-                                        <span *ngIf="messNumber == 12">
-                                            Giới tính không được bỏ trống
-                                        </span>
-                                    </div>
                                 </div>
                             </div>
 
@@ -107,16 +63,11 @@
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 13">
-                                        Vai Trò không được bỏ trống
-                                    </span>
-                                </div>
                             </div>
 
                             <div class="form-group">
                                 <label> Ảnh </label>
-                                <input type="file" class="form-control form-control-user" id="image" placeholder="">
+                                <input type="file" [formControlName]="'image'" (change)="getFiles($event)" class="form-control form-control-user" id="image" placeholder="">
                             </div>
 
                             <div class="form-group row">
@@ -124,40 +75,16 @@
                                     <label>Mật khẩu</label>
                                     <input type="password" [formControlName]="'password'" class="form-control form-control-user"
                                         id="pass" placeholder="" required>
-                                    <div class="valid-false">
-                                        <span *ngIf="messNumber == 14">
-                                            Mật khẩu không được bỏ trống
-                                        </span>
-                                        <span *ngIf="messNumber == 15">
-                                            Hãy nhập không dưới 6 ký tự
-                                        </span>
-                                    </div>
                                 </div>
+
                                 <div class="col-sm-6">
                                     <label>Nhập lại mật khẩu</label>
                                     <input type="password" [formControlName]="'repassword'" class="form-control form-control-user"
                                         id="exampleRepeatPassword" placeholder="" required >
-                                    <div class="valid-false">
-                                        <span *ngIf="messNumber == 16">
-                                            Nhập lại mật khẩu không được bỏ trống
-                                        </span>
-                                        <span *ngIf="messNumber == 17">
-                                            Hãy nhập không dưới 6 ký tự
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="valid-false">
-                                    <span *ngIf="messNumber == 18">
-                                        Mật khẩu phải trùng nhau
-                                    </span>
                                 </div>
                             </div>
-                            <div class="valid-true">
-                                <span *ngIf="messNumber == 19 && this.isloading != false">
-                                    &nbsp;&nbsp;&nbsp;Vui lòng chờ giây lát ...
-                                </span>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-user btn-block">
+
+                            <button type="submit" class="btn btn-primary btn-user btn-block" [disabled]="StaffForm.invalid">
                                 Thêm nhân viên
                             </button>
                         </form>
