--- a/src/app/admin/staff-manager/detail-staff/detail-staff.component.html
+++ b/src/app/admin/staff-manager/detail-staff/detail-staff.component.html
@@ -6,7 +6,7 @@
                 <div class="side-bar">
                     <div class="user-info">
                       <!-- ẢNH NHÂN VIÊN -->
-                        <img class="img-profile img-circle img-responsive center-block" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                        <img class="img-profile img-circle img-responsive center-block" src="{{staff?.image}}" alt="">
                         <ul class="meta list list-unstyled">
                             <!-- TÊN NHÂN VIÊN -->
                             <li class="name">{{staff?.name}}<br>
