--- a/src/app/admin/newspaper-manager/update-newspaper/update-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/update-newspaper/update-newspaper.component.html
@@ -28,8 +28,7 @@
 
                             <div class="form-group">
                                 <label> Ảnh </label>
-                                <input type="file" class="form-control form-control-user"
-                                    id="image" placeholder="">
+                                <input type="file"  (change)="getFiles($event)" class="form-control form-control-user" id="image" placeholder="">
                             </div>
 
                             <button type="submit" class="btn btn-primary btn-user btn-block" [disabled]="newsPaperForm.invalid">
