finish component address, recharge-history, article-manager

--- a/src/app/client/clients-page/shared/header/header.component.html
+++ b/src/app/client/clients-page/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="container container-header clearfix"><a id="top-logo" href="https://phongtro123.com/"
             title="cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ">cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ</a>
             <div class="user-welcome clearfix js-reload-html-header">
-                <div class="welcome-text">Xin chào, <strong>Nguyễn Thanh Hiệp</strong>. Mã tài khoản:
+                <div class="welcome-text">Xin chào, <strong>Phạm Thanh Bình</strong>. Mã tài khoản:
                     <strong>99624</strong>. Số dư: <strong>0 VNĐ</strong>
                 </div>
                 <div class="dropdown">
@@ -40,12 +40,9 @@
         </div>
         <nav id="navbar-menu">
         <ul id="menu-main-menu" class="container-menu clearfix level-1">
-            <li class="navbar_item clearfix active current-menu-item"><a routerLink="/client/home">Trang
-                    chủ</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/client/rent-room">Cho thuê phòng
-                    trọ</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/client/room-mates">Tìm người ở
-                    ghép</a></li>
+            <li class="navbar_item clearfix active current-menu-item"><a routerLink="/client/home">Trang chủ</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/client/rent-room">Cho thuê phòng trọ</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/client/room-mates">Tìm người ở ghép</a></li>
             <li class="navbar_item clearfix "><a href="https://phongtro123.com/blog.html">Blog</a></li>
             <li class="navbar_item clearfix "><a href="https://phongtro123.com/huong-dan-su-dung">Hướng dẫn</a></li>
             <li class="navbar_item clearfix "><a href="https://phongtro123.com/nap-tien-vao-tai-khoan">Nạp tiền</a>
