--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -22,9 +22,8 @@
 
                         <div class="btn-toolbar mb-2 mb-md-0">
                             <div class="dropdown mr-1">
-                                <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Lọc theo loại VIP
-                </button>
+                                <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton"
+                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Lọc theo loại VIP</button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip50">Tin Hot</a>
                                     <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip30">Tin VIP 30</a>
@@ -63,28 +62,31 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>#312303</td>
+                                    <tr *ngFor="let article of articles">
+                                        <td>#{{article.articleId}}</td>
                                         <td>
                                             <div class="post_thumb">
-                                                <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank"><img src="./#99624 - Quản lý tin đăng - Phongtro123.com_files/121103604-623408741666058-7968531141853584447-n_1602151851.jpg"></a>
+                                                <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
+                                                    <img src="{{article.image}}">
+                                                </a>
                                             </div>
                                         </td>
                                         <td>
                                             <span class="badge badge-pill badge-warning">Phòng trọ</span>
-                                            <a class="post_title" target="_blank" href="https://phongtro123.com/quan-ly/tin-dang.html#" style="color: #055699;">Nhà Trọ Phương Canh Giá Rẻ: 1tr2 25m2</a>
+                                            <a class="post_title" target="_blank" href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                             style="color: #055699;">{{article.title}}</a>
                                             <div class="post_btn_toolbar mt-3">
                                                 <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
                                             </div>
-                                            <span style="display: block; color: #999; margin-top: 10px;">Cập nhật gần nhất: 17:08 08/10/2020</span>
+                                            <span style="display: block; color: #999; margin-top: 10px;">Cập nhật gần nhất: {{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</span>
                                         </td>
                                         <td>
-                                            <div class="post_price">1.2 triệu/tháng</div>
+                                            <div class="post_price">{{article.roomPrice}} triệu/tháng</div>
                                         </td>
-                                        <td>08/10/2020 17:08:10</td>
-                                        <td>13/10/2020 17:08:10</td>
+                                        <td>{{article.createTime | date:'dd/MM/yyyy - HH:mm'}}</td>
+                                        <td>{{article.expDate | date:'dd/MM/yyyy - HH:mm'}}</td>
                                         <td>
-                                            <span class="text text-warning" style="white-space: nowrap;">Tin đã ẩn (Sử dụng lại)</span>
+                                            <span class="text text-warning" style="white-space: nowrap;">{{article.status}}</span>
                                         </td>
                                     </tr>
 
