--- a/src/app/client/profiles/recharge-history/recharge-history.component.html
+++ b/src/app/client/profiles/recharge-history/recharge-history.component.html
@@ -26,168 +26,23 @@
                         <table class="table table-bordered table-striped" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
-                                    <th class="nowrap">Ngày nạp</th>
                                     <th class="nowrap">Mã giao dịch</th>
+                                    <th class="nowrap">Ngày nạp</th>
                                     <th class="nowrap">Phương thức</th>
                                     <th class="nowrap">Số tiền</th>
-                                    <th class="nowrap">Khuyến mãi</th>
-                                    <th class="nowrap">Thực nhận</th>
+                                    <th class="nowrap">Nội dung</th>
                                     <th class="nowrap">Trạng thái</th>
-                                    <th class="nowrap" style="width:200px;">Ghi chú</th>
                                 </tr>
                             </thead>
                             <tbody>
-
-                                <tr>
-                                    <td>00:46 1/4/2021</td>
-                                    <td>3123031617212761</td>
-                                    <td>
-                                        Credit Card
-                                    </td>
-                                    <td>90.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>00:15 1/4/2021</td>
-                                    <td>996241617210947</td>
-                                    <td>
-                                        Credit Card
-                                    </td>
-                                    <td>50.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>00:02 1/4/2021</td>
-                                    <td>3123031617210123</td>
-                                    <td>
-                                        ATM Online
-                                    </td>
-                                    <td>90.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>00:01 1/4/2021</td>
-                                    <td>3123031617210100</td>
-                                    <td>
-                                        ATM Online
-                                    </td>
-                                    <td>10.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>23:58 31/3/2021</td>
-                                    <td>3123031617209932</td>
-                                    <td>
-                                        ATM Online
-                                    </td>
-                                    <td>10.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td>Lỗi không xác định được nguyên nhân,vui lòng liên hệ để tra soát.</td>
-                                </tr>
-                                <tr>
-                                    <td>23:52 31/3/2021</td>
-                                    <td>3123031617209568</td>
-                                    <td>
-                                        C.KHOẢN
-                                    </td>
-                                    <td>10.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>23:49 31/3/2021</td>
-                                    <td>3123031617209360</td>
-                                    <td>
-                                        Credit Card
-                                    </td>
-                                    <td>10.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>16:44 8/10/2020</td>
-                                    <td>PT12308102020164444</td>
-                                    <td>
-                                        MOMO
-                                    </td>
-                                    <td>50.000</td>
-                                    <td>0</td>
-                                    <td>
-                                        0
-                                    </td>
-
-
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"
-                                            style="width: 16px; height: 16px; color: red;"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12" y2="16"></line></svg></td>
-                                    <td>Nạp tiền không thành công, Lỗi: #36, Phiên giao dịch đã hết hạn</td>
-                                </tr>
-                                <tr>
-                                    <td>16:33 8/10/2020</td>
-                                    <td>996241602149588</td>
-                                    <td>
-                                        Tặng tiền
-                                    </td>
-                                    <td>10.000</td>
-                                    <td>10.000</td>
-                                    <td>
-                                        10.000
-                                    </td>
-                                    <td align="center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle"
-                                            style="width: 16px; height: 16px; color: #28a745;"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></td>
-                                    <td></td>
+                                <tr *ngFor="let recharge of rechargeHistory">
+                                    <td [ngStyle]="{'text-align': 'center'}">{{recharge.transactionId}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{recharge.date}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">Paypal</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{recharge.amount}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{recharge.description}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle"
+                                        style="width: 16px; height: 16px; color: #28a745;"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></td>
                                 </tr>
                             </tbody>
                         </table>
