--- a/src/app/client/clients-page/shared/header/header.component.html
+++ b/src/app/client/clients-page/shared/header/header.component.html
@@ -43,11 +43,10 @@
             <li class="navbar_item clearfix active current-menu-item"><a routerLink="/client/home">Trang chủ</a></li>
             <li class="navbar_item clearfix "><a routerLink="/client/rent-room">Cho thuê phòng trọ</a></li>
             <li class="navbar_item clearfix "><a routerLink="/client/room-mates">Tìm người ở ghép</a></li>
-            <li class="navbar_item clearfix "><a href="https://phongtro123.com/blog.html">Blog</a></li>
-            <li class="navbar_item clearfix "><a href="https://phongtro123.com/huong-dan-su-dung">Hướng dẫn</a></li>
-            <li class="navbar_item clearfix "><a href="https://phongtro123.com/nap-tien-vao-tai-khoan">Nạp tiền</a>
-            </li>
-            <li class="navbar_item clearfix "><a href="https://phongtro123.com/bang-gia-dich-vu">Bảng giá</a></li>
+            <li class="navbar_item clearfix "><a routerLink="block">Blog</a></li>
+            <li class="navbar_item clearfix "><a routerLink="tutorial">Hướng dẫn</a></li>
+            <li class="navbar_item clearfix "><a routerLink="profile/paypal-view">Nạp tiền</a></li>
+            <li class="navbar_item clearfix "><a routerLink="profile/price-list">Bảng giá</a></li>
         </ul>
         </nav>
     </div>
