--- a/src/app/client/profiles/create-article/create-article.component.html
+++ b/src/app/client/profiles/create-article/create-article.component.html
@@ -63,19 +63,20 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="street_number" class="col-form-label">Số nhà</label>
                             <input type="text" class="form-control js-input-street-number" name="street_number" id="street_number" value="">
                         </div>
                     </div>
-                </div>
+                </div> -->
+                
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
                             <label for="diachi" class="col-form-label">Địa chỉ chính xác</label>
-                            <input type="text" readonly="" class="form-control" name="dia_chi" id="diachi" required="" data-msg-required="Chưa chọn khu vực đăng tin">
+                            <input type="text" class="form-control" name="dia_chi" id="diachi" required="" data-msg-required="Chưa chọn khu vực đăng tin">
                         </div>
                     </div>
                 </div>
